--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
     "chart.js": "^4.4.2",
+    "date-fns": "^3.6.0",
     "file-saver": "^2.0.5",
     "query-string": "^9.0.0",
     "react": "^18.3.1",
