--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-PORT=3000
+REACT_APP_FRONTEND_PORT=3000
+REACT_APP_CONNECTION_STRING="http://192.168.0.113"
+REACT_APP_BITRIX_URL="https://b24-ohsmbq.bitrix24.in"
+REACT_APP_BACKEND_PORT=2000
