--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
