--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_FRONTEND_PORT=3000
 REACT_APP_CONNECTION_STRING="http://13.202.57.121"
-REACT_APP_BITRIX_URL="https://b24-ohsmbq.bitrix24.in"
+REACT_APP_BITRIX_URL="https://oipl.bitrix24.in"
 REACT_APP_BACKEND_PORT=2000
