changes pdf rendering

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 REACT_APP_FRONTEND_PORT=3000
-REACT_APP_CONNECTION_STRING="http://192.168.0.113"
+REACT_APP_CONNECTION_STRING="http://localhost"
 REACT_APP_BITRIX_URL="https://shivam.bitrix24.in"
 REACT_APP_BACKEND_PORT=2000 
 
