--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "file-saver": "^2.0.5",
+    "query-string": "^9.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
+    "react-countup": "^6.5.3",
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
