role based authentication added

--- a/.env
+++ b/.env
@@ -15,3 +15,11 @@ REACT_APP_BACKEND_PORT=2000
 # REACT_APP_CONNECTION_STRING="https://7a97-103-144-36-237.ngrok-free.app"
 # REACT_APP_BITRIX_URL="https://shivam.bitrix24.in"
 # REACT_APP_BACKEND_PORT=2000 
+
+
+
+# theme configuration & color //bg-[#2980b9]
+REACT_APP_BGCOLOR="#2980b9"
+REACT_APP_NAVBARCOLOR="#2980b9"
+REACT_APP_SIDEBARCOLOR="#2980b9"
+REACT_APP_CARDHEADERCOLOR="#2980b9"
