changed the css nd added logout btn

--- a/.env
+++ b/.env
@@ -1,30 +1,11 @@
-# REACT_APP_FRONTEND_PORT=3000
-# REACT_APP_CONNECTION_STRING="http://localhost"
-# REACT_APP_BITRIX_URL="https://shivam.bitrix24.in"
-# REACT_APP_BACKEND_PORT=2000 
-
-# testing
-REACT_APP_FRONTEND_PORT=3000
-# REACT_APP_CONNECTION_STRING="http://13.202.57.121"
-REACT_APP_BITRIX_URL="https://b24-ye5msp.bitrix24.in"
-REACT_APP_BACKEND_PORT=2000        
-# office
-#    REACT_APP_FRONTEND_PORT=3000
-REACT_APP_CONNECTION_STRING="http://localhost"
-# REACT_APP_BITRIX_URL="https://oipl.bitrix24.in"
-# REACT_APP_BACKEND_PORT=2000        
-
-
-# ngrock
-# REACT_APP_FRONTEND_PORT=3000
-# REACT_APP_CONNECTION_STRING="https://7a97-103-144-36-237.ngrok-free.app"
-# REACT_APP_BITRIX_URL="https://shivam.bitrix24.in"
-# REACT_APP_BACKEND_PORT=2000 
+  
+REACT_APP_BACKEND_URL=   "https://tourvoucher.is10live.com"
+REACT_APP_FRONTEND_URL=   "https://tourvoucher.is10live.com"
+REACT_APP_BITRIX_URL="https://oipl.bitrix24.in"
+     
 
 
 
-# theme configuration & color //bg-[#2980b9]
-REACT_APP_BGCOLOR="#2980b9"
-REACT_APP_NAVBARCOLOR="#2980b9"
-REACT_APP_SIDEBARCOLOR="#2980b9"
-REACT_APP_CARDHEADERCOLOR="#2980b9"
+
+
+
