changes and add date in add tour

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
   
-# REACT_APP_BACKEND_URL=   "https://tourvoucher.is10live.com"
-# REACT_APP_FRONTEND_URL=   "https://tourvoucher.is10live.com"
-# REACT_APP_BITRIX_URL="https://oipl.bitrix24.in"
+REACT_APP_BACKEND_URL=   "https://tourvoucher.is10live.com"
+REACT_APP_FRONTEND_URL=   "https://tourvoucher.is10live.com"
+REACT_APP_BITRIX_URL="https://oipl.bitrix24.in"
 
 
-REACT_APP_BACKEND_URL=   "http://localhost:2000"
-REACT_APP_FRONTEND_URL=   "http://localhost:3000"
-REACT_APP_BITRIX_URL="https://b24-xch65r.bitrix24.in"
+# REACT_APP_BACKEND_URL=   "http://localhost:2000"
+# REACT_APP_FRONTEND_URL=   "http://localhost:3000"
+# REACT_APP_BITRIX_URL="https://b24-yrplzc.bitrix24.in"
      
 
 
