--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 
 REACT_APP_BACKEND_URL=   "http://localhost:2000"
 REACT_APP_FRONTEND_URL=   "http://localhost:3000"
-REACT_APP_BITRIX_URL="https://b24-yrplzc.bitrix24.in"
+REACT_APP_BITRIX_URL="https://b24-5yzkqs.bitrix24.in"
      
 
 
